--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "server": "nodemon index.js",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
-    "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
+    "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+    "push": "git add . && git commit -m 'done' && git push"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "knex": "^2.0.0",
     "sqlite3": "^5.0.8"
   },
